--- a/classmodules/clsEvent.cls
+++ b/classmodules/clsEvent.cls
@@ -6,13 +6,11 @@ BEGIN
   DataSourceBehavior  = 0  'vbNone
   MTSTransactionMode  = 0  'NotAnMTSObject
 END
-Attribute VB_Name = "clsChanMember"
+Attribute VB_Name = "clsEvent"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = True
 Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
-Attribute VB_Ext_KEY = "SavedWithClassBuilder6" ,"Yes"
-Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
 'ignitionServer is (C)  Keith Gable and Nigel Jones.
 '----------------------------------------------------
 'You must include this notice in any modifications you make. You must additionally
@@ -26,7 +24,7 @@ Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
 '
 'ignitionServer is based on Pure-IRCd <http://pure-ircd.sourceforge.net/>
 '
-' $Id: clsChanMember.cls,v 1.2 2004/05/28 20:20:53 ziggythehamster Exp $
+' $Id: clsEvent.cls,v 1.1 2004/05/28 20:20:53 ziggythehamster Exp $
 '
 '
 'This program is free software.
@@ -40,10 +38,9 @@ Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
 '
 'You should have received a copy of the GNU General Public License along with this program.
 'if not, write to the Free Software Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
+
 Option Explicit
 
-Public Member As clsClient
-Public IsOp As Boolean
-Public IsVoice As Boolean
-Public IsOwner As Boolean 'IRCX - Ziggy
-Public IsHOp As Boolean 'HalfOp seems to be an unwriten standard in IRC now...
+Public EventType As String
+Public EventName As String
+Public Mask As String
