--- a/docs/releasenotes.txt
+++ b/docs/releasenotes.txt
@@ -1,47 +1,126 @@
-		RELEASE NOTES FOR IGNITIONSERVER RELEASE: 0.1.2-R2
+		RELEASE NOTES FOR IGNITIONSERVER RELEASE: 0.2.1
+# $Id: releasenotes.txt,v 1.2 2004/05/28 20:20:55 ziggythehamster Exp $
 
 
 Changes:
 
-Zg - [21-Jan] - Date wasn't out of order.. just out-of-timezone :P began working on X: lines, the events system, and a few other things I've forgotten by the time I've written this
-Zg - [28-Jan] - Whee... just found like 4 bugs thanks to a real user (Michio of X9)
-Zg - [28-Jan] - Bugs 881792 and 886678 fixed
-DG - [29-Jan] - Fixed Bug 886730
-DG - [29-Jan] - Added X:DIE to prevent 'Lazy Admins'(LazyAdminitis) from not configuring the server, EggDrop has it, Why can't we?
-DG - [29-Jan] - Updated Docs to suit.
-DG - [29-Jan] - Change of heart Made X:DIE:1 just auto kill...
-DG - [29-Jan] - Docs updated + added date for first two entries (as 1-Dec) in case anyone attempts to Phase our ChangeLog on a website(or something)
-DG - [30-Jan] - Added Offline Mode, Changed P Lines to way they SHOULD be, added a Custom Notice Line, Added a P Line Structure(like the OLines etc)
-Zg - [30-Jan] - Added CHGHOST (Task 90351)
-Zg - [30-Jan] - Fixed bug #886707 (whois muckup)
-Zg - [30-Jan] - Fixed bug #888011 (OnJoin muckup)
-zg - [31-Jan] - Added CHGNICK (Task 90351)
+DG - [31-Jan] - Release 2 Uploaded and tagged
+Zg - [31-Jan] - Edited source and changed back to 0.1.3
+Zg - [31-Jan] - Fixed bug 886688
+Zg - [31-Jan] - Fixed bug 888392
+DG - [1-Feb] - Added Id CVS Tags
+DG - [1-Feb] - MD5 Class Added for one of Ziggys tasks... also makes a future one of mine possible
+Zg - [1-Feb] - X:DNSMASK added
+Zg - [1-Feb] - X:SERVERLOCATION added
+DG - [1-Feb] - X:CRYPT added
+DG - [1-Feb] - /passcrypt added (P.S. Ziggy always leave an empty line at bottom...
+Zg - [1-Feb] - fixed small bug Nigel had... PassCrypt replied as if the msg was coming from yourself. This could break some clients.
+Zg - [2-Feb] - basis for event system is in.. MINIMAL ERROR TRAPPING! there are many things i need to do, so it's safe to say the event system does not yet exist!
+Zg - [3-Feb] - USER events added
+Zg - [3-Feb] - Fixed more EVENT errors -- no longer sends events twice
+Zg - [3-Feb] - EVENT and CREATE now use RFC1459 origins (even though the IRCX draft doesn't specify). It's easier to code for if the command is in the same place as the rest of them.
+Zg - [3-Feb] - KILL'd changed to Killed in m_kill.
+Zg - [3-Feb] - Added framework for oper mode/flag +P (protected)
+Zg - [3-Feb] - Oper mode +P (protected) is in full operation
+Zg - [3-Feb] - Linked to X9Chat for a few minutes and found enough bugs to keep Sir William Gates busy for a few years. LINKING IS *EXPERIMENTAL*!
+Zg - [4-Feb] - Fixed bug with channel key (+k)
+Zg - [4-Feb] - Aliased /CONNECT to /LINK -- either now works (suggested by Michio)
+Zg - [4-Feb] - Access-related modes are now sent to other servers (before, you'd be an owner/host/voice locally, but not on the other server).
+DG - [5-Feb] - Test CVS Changes....
+DG - [5-Feb] - Fix Bug Described in Bugs item #890182
+Zg - [6-Feb] - Renamed ircd.log to ircx.log
+Zg - [6-Feb] - Felt the urge to add /whois * for opers
+Zg - [6-Feb] - Security bug is fixed now.
+Zg - [6-Feb] - Fixed bug with /who; your status and if oper or not is shown in /who's not directed to a channel.
+Zg - [6-Feb] - Access case-sensibility fixed.
+DG - [7-Feb] - No more C/N Lines say Hi to just L Lines Ziggy please note i'll be re-using the C lines
+Zg - [8-Feb] - Opers are no longer auto-q and no longer can defeat bans unless they are protected (+P).
+Zg - [8-Feb] - Added more events (USER.PART/USER.JOIN)
+Zg - [12-Feb] - Another bug identified... /part is broken! I'll be scanning my code since 7-Feb (before DG's addition) to see what got changed that fucks it up. Unless for some reason the server relies solely on C/N lines, it's my modified join code (restore to check?).
+Zg - [13-Feb] - Combed the source and located the bug: It involved the previous misuse of a variable (note: pureIRCd used it wrong, and without double checking, I assumed they did it right). Fixed possible future bug where if you tried to /part a room that didn't exist it would generate an error.
+Zg - [15-Feb] - Finished the core of the events system (DELETE, LIST added)
+Zg - [15-Feb] - Tested events a bit; fixed a bug I found
+Zg - [18-Feb] - Probably fixed a few things yesterday
+Zg - [18-Feb] - Fixed typo in /lusers
+Zg - [18-Feb] - Added X:ALLOWMULTIPLE:0|1 (simple enough, eh?)
+DG - [19-Feb] - Fixed Suspected Typo in m_ircx_chan
+DG - [19-Feb] - Added Umode/OperFlag E and Changed A -> N... (E Comes from Ultimate)
+DG - [19-Feb] - Starting work on /add - ziggy leave this stuff alone I havn't finished with it and I know it so let me finish it off plus finish some other code I'm working on but Havn't Committed
+DG - [19-Feb] - Changed Default MOTD
+DG - [20-Feb] - /add finished but /del and /mod is still on it's way
+DG - [20-Feb] - Fixed up Copyright Notices
+DG - [20-Feb] - Changed Docs tiny bit
+DG - [20-Feb] - Can't Remember what else...
+DG - [20-Feb] - Added MaskDNS Option 2(Auto Host Name) - Note Ziggy the VHost won't change after /nick this is not a bug it's a feature
+DG - [20-Feb] - I think I found a links bug... Damit
+DG - [20-Feb] - Fixed Bug 901367(Stats O)
+DG - [20-Feb] - Started work on /remoteadm
+DG - [20-Feb] - Added +Z
+DG - [21-Feb] - Added /remoteadm Login
+DG - [21-Feb] - Added /remoteadm SEND [Oper/Server]
+DG - [21-Feb] - As Ziggy is prep'ing to move He's not coding so It won't matter if I hold back all the actual changes(cos they are incomplete)
+#COMMENT - DG - SVN Introduced
+DG - [24-Feb] - Can't remember other changes(sorry) I think it was just bug fixing/cleanups
+DG - [25-Feb] - Cleared Task #94456 (OnPart/newlines)
+DG - [25-Feb] - Cleared Task #93419 (Change nickname that *Serv calls on) - Kinda but it will do until we make services
+DG - [26-Feb] - Introduced Ziggys m_kill changes(should clear /raw close bug
+DG - [26-Feb] - Added code to prevent Special UModes to be given via an OLine - Example +Z(Remote Admin Client), +S(Service), +r(Registered NickName)
+DG - [01-Mar] - Cleared Bug #904090 (Setting +q/+o on self when you've got it gives ChanOpsNeeded)
+DG - [01-Mar] - Cleared Bug #891538 (User ident can contain bad characters)
 
 
 
 New Features include:
 
-- X Lines
-- AutoDie(Kills connecting users if the server hasn't being configured
-- Structured P Line
-- Offline Mode & Message
-- Custom Auth Notice
-- CHGHOST Command
-- CHGNICK Command
+MD5 Password Support - PassCrypt (Tasks: 93198 & 93199)
+X:MASKDNS - DNS masker - MD5 Crypt or a user.<yourchoice> domain
+X:SERVERLOCATION - e.g. Auckland, New Zealand (Task: 93196)
+CHGHOST and CHGNICK - /chgnick <user> <newnick> or /chghost <user> <newvhost> (Task: 90351)
+EVENT System Base
+Spelling Errors corrected
+Oper Mode/Flag P - Protected Oper (Task: 93337)
+/LINK alias - Goes to /connect
+C/N Lines gone - L lines introduced (Task: 93371)
+X:ALLOWMULTIPLE - Multiple Instances of ignitionServer Allowed (Task: 93213)
+/n in OnJoin & OnPart(Half Implemented) (Task: 94456)
+Remoteadm command - For Remote Admin Tool
+Custom NickServ and ChanServ nicks (Task: 93419)
 
-
-Bug Fixes
+Bug Fixes:
 
 Bug #  | Bug Name
 ---------------------
-877994 | mIRC hides modes 
-881792 | Q: (Nick Reservation) Lines are Case Sensitive 
-886678 | Q: lines can not be overridden 
-886707 | CRITICAL: non-local users do not show a proper whois 
-886730 | Case Sensitive Logins 
-
-
+886688	CRITICAL: User!ID@Host format is not used in some places
+888392	/CHGNICK does not propragate to servers properly
+888457	If cptr.IP is null, a bad reply will occur
+889517	IRC Operators can be kicked by Owners
+890182	Links behave erraticly
+891555	[SECURITY] ANY OPERATOR CAN GIVE THEMSELVES ANY MODE
+889523	*ALL* Access is case-sensitive
+892173	Opers can not speak while banned on channel
+892180	*misinterpeted bug* /part not working
+899384	/lusers typo
+901367	/stats o Results Bug
+890012	Bugs found on X9
+904090	Setting +q/+o on self when you've got it gives ChanOpsNeeded
+891538	User ident can contain bad characters
+889520	/close does weird things
 
 Comments:
 
-This release is mainly a Bug Fix/tidy up with some new features
+First of 2-4 RC Releases for BETA Branch
+
+Basicly
+-Alpha Stage-
+0.1.2
+0.1.2-R2(Special Release)
+-BETA RCx Stage-
+0.2.x
+-BETA Stage-
+0.3.x
+-Final RCx Stage-
+0.4.x
+-V1 Final Stage-
+1.0.0
+
+And on and on and on
