--- a/changelog.txt
+++ b/changelog.txt
@@ -4,8 +4,9 @@
 #
 # Zg = Ziggy(ziggy@ignition-project.com)
 # DG = DigiGuy(digiguy@ignition-project.com)
+# AW = Airwalk(airwalk@ignition-project.com)
 #
-# $Id: changelog.txt,v 1.3 2004/05/28 20:20:52 ziggythehamster Exp $
+# $Id: changelog.txt,v 1.4 2004/05/28 20:35:04 ziggythehamster Exp $
 #
 ### Project Start ###
 #
@@ -175,4 +176,18 @@ DG - [01-Mar] - Cleared Bug #891538 (User ident can contain bad characters)
 ### RELEASE - 0.2.1 - BETA RC1 ###
 #
 DG - [01-Mar] - Tagged and Such
-DG - Test
+#COMMENT - DG - Introduction of bugs.ignition-project.com
+DG - [04-Mar] - Ziggys Back.
+DG - [04-Mar] - Cleared ReleaseNotes
+DG - [04-Mar] - Added ChanMode +O - Oper Only Joins
+DG - [04-Mar] - Added /ChanPass - SYNTAX: /chanpass #channel owner/hostkey
+Zg - [05-Mar] - Just making sure that I can figure out SVN (I may begin CHANNEL events tomorrow [or later today GMT])
+DG - [06-Mar] - Fixed Unreported Bug - +O wouldn't show as set if you joined a channel with it on.
+DG - [06-Mar] - Added a tiny bit more debug stuff to trackdown a few bugs that i've spotted but the debug stuff currently hasn't pinpointed it - Really I should do the debug byte by byte
+#COMMENT - DG - Airwalk's First Commit - airwalk@ignition-project.com (AW)
+AW - [08-Mar] - Fixed bug #0000007 (No-name rooms can be created)
+DG - [13-Mar] - Everything seems stable so we'll give another RC a shot and see what comes out. - No ReleaseNotes for this release(Sorry to people that love reading them)
+DG - [13-Mar] - Tagged and Such
+#
+### RELEASE - 0.2.2 - BETA RC2 ###
+#
