--- a/classmodules/clsChannel.cls
+++ b/classmodules/clsChannel.cls
@@ -26,7 +26,7 @@ Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
 '
 'ignitionServer is based on Pure-IRCd <http://pure-ircd.sourceforge.net/>
 '
-' $Id: clsChannel.cls,v 1.2 2004/05/28 20:20:53 ziggythehamster Exp $
+' $Id: clsChannel.cls,v 1.3 2004/05/28 20:35:04 ziggythehamster Exp $
 '
 '
 'This program is free software.
@@ -61,6 +61,7 @@ Public IsNoExternalMsgs As Boolean
 Public IsInviteOnly As Boolean
 Public IsModerated As Boolean
 Public IsRegistered As Boolean
+Public IsOperOnly As Boolean
 Public Limit As Long
 Public Key As String
 
