--- a/classmodules/clsChanHashTable.cls
+++ b/classmodules/clsChanHashTable.cls
@@ -13,7 +13,7 @@ Attribute VB_PredeclaredId = False
 Attribute VB_Exposed = False
 Attribute VB_Ext_KEY = "SavedWithClassBuilder6" ,"Yes"
 Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
-'ignitionServer is (C)  Keith Gable and Nigel Jones.
+'ignitionServer is (C)  Keith Gable, Nigel Jones and Reid Burke.
 '----------------------------------------------------
 'You must include this notice in any modifications you make. You must additionally
 'follow the GPL's provisions for sourcecode distribution and binary distribution.
@@ -23,10 +23,11 @@ Attribute VB_Ext_KEY = "Top_Level" ,"Yes"
 'Released under the GNU General Public License
 'Contact information: Keith Gable (Ziggy) <ziggy@ignition-project.com>
 '                     Nigel Jones (DigiGuy) <digiguy@ignition-project.com>
+'                     Reid Burke  (AirWalk) <airwalk@ignition-project.com>
 '
 'ignitionServer is based on Pure-IRCd <http://pure-ircd.sourceforge.net/>
 '
-' $Id: clsChanHashTable.cls,v 1.3 2004/05/28 20:35:04 ziggythehamster Exp $
+' $Id: clsChanHashTable.cls,v 1.4 2004/05/28 21:27:35 ziggythehamster Exp $
 '
 '
 'This program is free software.
